--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -392,6 +392,7 @@ body.dark-mode .dropdown-item:hover {
     width: auto;
 }
 
+/* ===== Tablets (<=991px) ===== */
 /* ===== Tablets & Phones (<=991px) ===== */
 @media (max-width: 991px) {
   .header-main .row.align-items-center {
@@ -510,76 +511,102 @@ body.dark-mode .dropdown-item:hover {
   }
 </script>
 
-<div class="row align-items-center">
-  
-  <!-- First Row -->
-  <div class="first-row">
-    <div class="left-side d-flex align-items-center">
-      <!-- search -->
-      <div class="search-wrapper" id="searchWrapper">
-        <button type="button" class="search-toggle" onclick="toggleSearch()">
-          <i class="fa fa-search"></i>
-        </button>
-        <div class="search-field">
-          <form method="GET" action="{% url 'search' %}">
-            <input type="text" name="keyword" placeholder="Search...">
-          </form>
+
+<header class="section-header">
+  <nav class="navbar p-md-0 navbar-expand-sm navbar-light">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </nav>
+
+  <section class="header-main">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-auto">
+          <a href="{% url 'home' %}" class="brand-wrap nav-link">
+            <h4 class="brand-title">
+              <span class="brand-part1">JURU</span>
+              <span class="brand-part2">Collection</span>
+            </h4>
+          </a>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-6">
+          <a href="{% url 'home' %}" class="brand-wrap logo-link">
+            <img class="logo-img" src="{% static 'images/logo.png' %}" alt="JURU Collection">
+          </a>
+        </div>
+
+        <!-- Categories Dropdown -->
+        <div class="col-lg col-sm col-md col-6 flex-grow-0">
+          <div class="category-wrap dropdown d-inline-block float-right">
+            <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-bars"></i> Categories
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'store' %}">All products</a>
+              {% for category in links %}
+                <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+
+        <!-- Store + About -->
+        <div class="col-auto d-flex align-items-center">
+          <a href="{% url 'store' %}" class="nav-link mx-2 {% if request.resolver_match.url_name == 'store' %}active{% endif %}">Store</a>
+          <a href="{% url 'about' %}" class="nav-link mx-2 {% if request.resolver_match.url_name == 'about' %}active{% endif %}">About</a>
+        </div>
+
+        <!-- Search -->
+        <div class="search-wrapper ml-3" id="searchWrapper">
+          <button type="button" class="search-toggle" onclick="toggleSearch()">
+            <i class="fa fa-search"></i>
+          </button>
+          <div class="search-field">
+            <form method="GET" action="{% url 'search' %}">
+              <input type="text" name="keyword" placeholder="Search...">
+            </form>
+          </div>
+        </div>
+
+        <!-- Right side -->
+        <div class="col-auto ml-auto">
+          <div class="d-flex align-items-center justify-content-end user-info">
+            {% if user.id %}
+            <div class="text-right mr-3">
+              <small class="title">Welcome {{ user.first_name }}</small><br>
+              <a href="{% url 'dashboard' %}">Dashboard</a> | 
+              <a href="{% url 'logout' %}">Logout</a>
+            </div>
+            {% else %}
+            <div class="text-right mr-3">
+              <small class="title">Welcome guest!</small><br>
+              <a href="{% url 'login' %}">Sign in</a> | 
+              <a href="{% url 'register' %}">Register</a>
+            </div>
+            {% endif %}
+
+            <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
+              <div class="icon">
+                <i class="fa fa-shopping-cart"></i>
+              </div>
+              <span id="notifyBadge" class="badge badge-pill badge-danger notify">
+                {{ cart_count }}
+                <i class="fa fa-times" onclick="closeNotify()"></i>
+              </span>
+            </a>
+
+            <!-- Mode toggle -->
+            <button id="modeToggle" class="btn btn-outline-primary ml-2" onclick="toggleMode()">
+              <i id="modeIcon" class="fa fa-moon"></i>
+            </button>
+          </div>
         </div>
       </div>
-
-      <!-- user info -->
-      <div class="user-info">
-        {% if user.id %}
-          <small>Welcome {{ user.first_name }}</small> | 
-          <a href="{% url 'dashboard' %}">Dashboard</a> | 
-          <a href="{% url 'logout' %}">Logout</a>
-        {% else %}
-          <small>Welcome guest!</small> | 
-          <a href="{% url 'login' %}">Sign in</a> | 
-          <a href="{% url 'register' %}">Register</a>
-        {% endif %}
-      </div>
-
-      <!-- cart -->
-      <a href="{% url 'cart' %}" class="widget-header">
-        <i class="fa fa-shopping-cart"></i>
-        <span id="notifyBadge" class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
-      </a>
-
-      <!-- mode toggle -->
-      <button id="modeToggle" class="btn btn-outline-primary" onclick="toggleMode()">
-        <i id="modeIcon" class="fa fa-moon"></i>
-      </button>
     </div>
-
-    <div class="right-side">
-      <a href="{% url 'home' %}" class="brand-wrap">
-        <h4 class="brand-title"><span class="brand-part1">JURU</span><span class="brand-part2">Collection</span></h4>
-        <img class="logo-img" src="{% static 'images/logo.png' %}" alt="JURU Collection">
-      </a>
-    </div>
-  </div>
-
-  <!-- Second Row -->
-  <div class="second-row">
-    <div class="left-side">
-      <a href="{% url 'store' %}" class="nav-link">Store</a>
-      <a href="{% url 'about' %}" class="nav-link">About</a>
-    </div>
-    <div class="right-side category-wrap dropdown">
-      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-        <i class="fa fa-bars"></i> Categories
-      </button>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="{% url 'store' %}">All products</a>
-        {% for category in links %}
-          <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-
-</div>
-</div>
   </section>
 </header>
