updates the about

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -434,7 +434,11 @@ body.dark-mode .dropdown-item:hover {
     justify-content: flex-end;
   }
 }
-
+@media (max-width: 575px) {
+    .brand-title {
+        font-size: 9px !important;
+    }
+}
 
   /* Second row: categories + store + about (centered) */
   .header-main .col-lg.col-sm.col-md.col-6,  /* categories */
