--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
 
 <style>
 /* Force white text in dark mode for cards inside main content */
